Bug 261108 - Cells change in a table after close and re-open Tellico
Summary: Cells change in a table after close and re-open Tellico
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-23 23:18 UTC by Jorge Prata
Modified: 2011-01-12 07:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
CD collection with only one album (30.08 KB, application/x-tellico)
2010-12-23 23:18 UTC, Jorge Prata
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorge Prata 2010-12-23 23:18:18 UTC
Created attachment 55199 [details]
CD collection with only one album

Version:           2.3 (using KDE 4.5.4) 
OS:                Linux

Hi. I'm a Fedora 14 user with Tellico 2.3 and KDE 4.5.4.
My CD project is stop for some time because Tellico change some cells in a Table. I created a Field "Releases" with type "Table" and columns=4. First column is "Country" and the second is "Year" and so on. After I close Tellico and open again I have some years in column 1 (should be in column 2). The data of column 3 is now in column 2 and the data of column 4 is now in column 3.

Reproducible: Always

Steps to Reproduce:
Close Tellico saving the collection if necessary and re-open.

Actual Results:  
After I close Tellico and open again I have some years in column 1 (should be in column 2). The data of column 3 is now in column 2 and the data of column 4 is now in column 3.

Expected Results:  
To save the cells in the correct column.
Comment 1 Robby Stephenson 2011-01-12 07:21:00 UTC
Thanks for the test case!
Comment 2 Robby Stephenson 2011-01-12 07:21:03 UTC
SVN commit 1213924 by rstephenson:

Fix bug with parsing empty column value

BUG: 261108



 M  +4 -0      ChangeLog  
 M  +22 -1     src/tests/data/tabletest.tc  
 M  +9 -1      src/tests/tellicoreadtest.cpp  
 M  +5 -4      src/translators/xmlstatehandler.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1213924