Fix bug with parsing empty column value

BUG: 261108


svn path=/trunk/extragear/office/tellico/; revision=1213924